--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -17,9 +17,17 @@ knitr::opts_chunk$set(
 ```
 
 ```{r}
-source("R/functions.R")
+devtools::install_github("hugo-morvan/F1_stats")
 ```
 
+
+```{r}
+
+```
+
+```{r}
+
+```
 ```{r}
 
 ```
